Fix sticky review bar on Stack Overflow

--- a/stack-exchange-sticky-header.css
+++ b/stack-exchange-sticky-header.css
@@ -1,19 +1,20 @@
-/*! StackExchange Sticky Header v1.0.1 (2017-02-12) *//*
- * https://github.com/StylishThemes/StackExchange-Sticky-Header
- * https://userstyles.org/styles/136521
- * License: https://creativecommons.org/licenses/by-sa/4.0/
- */
 @-moz-document domain("stackoverflow.com"), domain("stackexchange.com"),
 domain("serverfault.com"), domain("superuser.com"), domain("stackapps.com"),
 domain("mathoverflow.net"), domain("askubuntu.com")  {
+  /*! StackExchange Sticky Header v1.0.1 (2017-02-12) *//*
+   * https://github.com/StylishThemes/StackExchange-Sticky-Header
+   * https://userstyles.org/styles/136521
+   * License: https://creativecommons.org/licenses/by-sa/4.0/
+   */
   .topbar {
-    position: fixed;
-    z-index: 250;
+    position: fixed !important;
+    z-index: 250 !important;
   }
   .container {
-    padding-top: 34px;
+    padding-top: 34px !important;
   }
-  .review-bar.sticky {
+  .review-bar.sticky, .review-bar {
     top: 34px !important;
+    margin-top: 0 !important;
   }
 }
